WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295828
[Cleanup] inlineBlockBaseline does not handle form type boxes anymore
https://bugs.webkit.org/show_bug.cgi?id=295828
Summary
[Cleanup] inlineBlockBaseline does not handle form type boxes anymore
alan
Reported
2025-07-11 20:24:17 PDT
ssia
Attachments
Patch
(6.17 KB, patch)
2025-07-11 20:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(118.77 KB, patch)
2025-07-11 20:37 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(118.09 KB, patch)
2025-07-12 06:43 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(6.75 KB, patch)
2025-07-12 15:23 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(118.41 KB, patch)
2025-07-12 15:24 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(6.98 KB, patch)
2025-07-12 18:37 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(118.64 KB, patch)
2025-07-12 18:38 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(7.01 KB, patch)
2025-07-13 06:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(118.66 KB, patch)
2025-07-13 06:39 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
[fast-cq]Patch
(7.01 KB, patch)
2025-07-21 13:42 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(9)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-07-11 20:36:12 PDT
Created
attachment 475916
[details]
Patch
alan
Comment 2
2025-07-11 20:37:08 PDT
Created
attachment 475917
[details]
Patch
alan
Comment 3
2025-07-12 06:43:39 PDT
Created
attachment 475925
[details]
Patch
alan
Comment 4
2025-07-12 15:23:34 PDT
Created
attachment 475930
[details]
Patch
alan
Comment 5
2025-07-12 15:24:19 PDT
Created
attachment 475931
[details]
Patch
alan
Comment 6
2025-07-12 18:37:01 PDT
Created
attachment 475941
[details]
Patch
alan
Comment 7
2025-07-12 18:38:01 PDT
Created
attachment 475942
[details]
Patch
alan
Comment 8
2025-07-13 06:38:56 PDT
Created
attachment 475951
[details]
Patch
alan
Comment 9
2025-07-13 06:39:42 PDT
Created
attachment 475952
[details]
Patch
Radar WebKit Bug Importer
Comment 10
2025-07-18 20:25:12 PDT
<
rdar://problem/156193015
>
alan
Comment 11
2025-07-21 13:42:48 PDT
Created
attachment 476136
[details]
[fast-cq]Patch
EWS
Comment 12
2025-07-21 15:54:34 PDT
Committed
297708@main
(172ce514dbb3): <
https://commits.webkit.org/297708@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 476136
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug