[Cleanup] inlineBlockBaseline does not handle form type boxes anymore https://bugs.webkit.org/show_bug.cgi?id=295828

Reviewed by Antti Koivisto.

* Source/WebCore/layout/integration/LayoutIntegrationBoxGeometryUpdater.cpp:
(WebCore::LayoutIntegration::inlineBlockBaseline):

Canonical link: https://commits.webkit.org/297708@main